--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         </header>
             <div id="intro">
                 <a href="https://www.linkedin.com/in/brandon-king-78617985/" target="_blank">
-                <img src="Profile Picture.jpg" alt="A profile picture of Brandon"></a>
+                <img src="profilepicture.jpg" alt="A profile picture of Brandon"></a>
 <!-- About Section-->
     <!--Full capital About heading class added below -->
     <h2 id="aboutsection">About</h2>
